--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,16 @@
 packages:
   - 'apps/*'
   - 'packages/*'
+
+catalog:
+  lucide-react: ^0.451.0
+  tailwindcss: ^3.4.13
+  autoprefixer: "^10.4.20"
+  postcss: "^8.4.49"
+  eslint: ^8.57.0
+  lenis: "^1.1.16"
+  "next-themes": "^0.4.3"
+  prettier: ^3.3.3
+  typescript: ^5.6.3
+  "@types/node": ^20
+  "@types/eslint": ^8
