--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,8 +4,8 @@
     //"outDir": "dist"
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["./src/*"],
-      "@ui/components/ui*": ["./src/components/ui/*"]
+      "@repo/ui/*": ["./src/*"],
+      "@repo/ui/components/ui*": ["./src/components/ui/*"]
     }
   },
   "include": ["."],
