--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "ui": "pnpm dlx shadcn@latest"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
