feat: add custom font support for the Nord font and update styles in Home component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,6 +31,7 @@
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
+    "./fonts.css": "./src/styles/fonts.css",
     "./postcss.config": "./postcss.config.mjs",
     "./tailwind.config": "./tailwind.config.ts",
     "./lib/*": "./src/lib/*.ts",
