feat: update package dependencies, add navigation and social links components, and enhance button styles

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -17,8 +17,10 @@
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.4",
+    "lucide-react": "catalog:",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-useanimations": "^2.10.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
