--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.4",
     "astro-lenis": "^1.0.0",
+    "framer-motion": "^11.17.0",
     "lenis": "^1.1.19",
     "lucide-react": "catalog:",
     "react": "^19.0.0",
