--- a/packages/projects-config/projects.json
+++ b/packages/projects-config/projects.json
@@ -4,14 +4,14 @@
       "slug": "earth",
       "description": "A 3D Earth built with ThreeJS",
       "repo": "https://github.com/kelsiesmurphy/projects/earth",
-      "url": "/projects/earth"
+      "url": "http://localhost:3000"
     },
     {
       "name": "Other Project",
       "slug": "project2",
       "description": "Another cool project",
       "repo": "https://github.com/kelsiesmurphy/projects/project2",
-      "url": "/projects/project2"
+      "url": "http://localhost:3001"
     }
   ]
   
