--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/projects-config": "workspace:*",
     "prettier": "^3.3.3",
     "turbo": "^2.3.3"
   },
