--- a/apps/project-earth/package.json
+++ b/apps/project-earth/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.8",
     "@react-three/fiber": "8.2.2",
     "@types/three": "^0.172.0",
     "react": "^18.3.1",
