--- a/apps/project-earth/package.json
+++ b/apps/project-earth/package.json
@@ -1,33 +1,25 @@
 {
   "name": "project-earth",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.120.8",
-    "@react-three/fiber": "8.2.2",
-    "@types/three": "^0.172.0",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.137.0"
+    "three": "^0.170.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.18.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "typescript": "~5.6.3",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.7"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "globals": "^15.9.0",
+    "vite": "^5.4.1"
   }
 }
