--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/projects-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "prettier": "^3.3.3",
     "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.15.1",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "vite": "^5.4.1"
   }
 }
