--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
+    "fontaine": "^0.5.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
     "tailwindcss": "^3.4.17",
