--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,7 @@ catalog:
   postcss: "^8.4.49"
   eslint: ^8.57.0
   lenis: "^1.1.16"
+  fontaine: "^0.5.0"
   "next-themes": "^0.4.3"
   prettier: ^3.3.3
   typescript: ^5.6.3
