feat: initialize project-vegan with configuration, styles, and vegan restaurant data

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -18,16 +18,16 @@
     "@repo/projects-config": "workspace:*",
     "@repo/ui": "workspace:*",
     "@studio-freight/lenis": "^1.0.42",
-    "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "catalog:react18",
+    "@types/react-dom": "catalog:react18",
     "astro": "^5.1.4",
     "astro-lenis": "^1.0.0",
     "framer-motion": "^11.17.0",
     "lenis": "^1.1.19",
     "lucide-react": "catalog:",
     "markdown-it": "^14.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18",
     "react-useanimations": "^2.10.0",
     "sanitize-html": "^2.14.0"
   },
