--- a/apps/project-party/trace-entirely/package.json
+++ b/apps/project-party/trace-entirely/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "partysocket": "^1.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18"
   },
   "devDependencies": {
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "catalog:react18",
+    "@types/react-dom": "catalog:react18",
     "partykit": "^0.0.110",
     "typescript": "^5.5.4"
   }
