--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/projects-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "eslint-config": "link:@/eslint-config",
     "prettier": "^3.3.3",
     "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.15.1",
   "engines": {
     "node": ">=18"
-  },
-  "dependencies": {
-    "vite": "^5.4.1"
   }
 }
