--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,9 @@
     "lint": "eslint . --max-warnings 0",
     "ui": "pnpm dlx shadcn@latest"
   },
+  "peerDependencies": {
+    "react": "^18"
+  },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
@@ -13,20 +16,21 @@
     "@turbo/gen": "^2.3.3",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "catalog:react18",
+    "@types/react-dom": "catalog:react18",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "postcss": "^8.4.49",
-    "react": "^19.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "catalog:",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
