--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,3 +15,10 @@ catalog:
   typescript: ^5.6.3
   "@types/node": ^20
   "@types/eslint": ^8
+
+catalogs:
+  react18:
+    react: ^18.3.1
+    react-dom: ^18.3.1
+    "@types/react": ^18.3.11
+    "@types/react-dom": ^18.3.0
