--- a/apps/project-vegan/package.json
+++ b/apps/project-vegan/package.json
@@ -14,9 +14,11 @@
     "@repo/projects-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@tanstack/react-table": "^8.20.6",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.1.5",
+    "lucide-react": "catalog:",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "react-leaflet": "^5.0.0",
