--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,7 @@ catalog:
   eslint: ^8.57.0
   lenis: "^1.1.16"
   fontaine: "^0.5.0"
+  sonner: "^1.7.2"
   "next-themes": "^0.4.3"
   prettier: ^3.3.3
   typescript: ^5.6.3
