--- a/packages/projects-config/projects.json
+++ b/packages/projects-config/projects.json
@@ -5,6 +5,13 @@
       "description": "A 3D Earth built with ThreeJS",
       "repo": "https://github.com/kelsiesmurphy/projects/project-earth",
       "url": "https://project-earth-kelsie.netlify.app/"
+    },
+    {
+      "name": "Vegan",
+      "slug": "vegan",
+      "description": "A map of Glasgow showing the vegan food locations",
+      "repo": "https://github.com/kelsiesmurphy/projects/project-earth",
+      "url": "https://project-vegan-kelsie.netlify.app/"
     }
   ]
   
