--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,10 +30,12 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "catalog:",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.4",
     "react-resizable-panels": "^2.1.7",
     "sonner": "^1.7.2",
